--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Site officiel de la photographe Nina Carducci">
+		<link rel="icon" href="data:,">
 		<title>Site de Nina Carducci</title>
 		<link rel="preload" as="image" href="./assets/images/nina.webp" defer>
 		<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -64,7 +65,8 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.webp" width="100" height="100" alt="Portrait de Nina Carducci">
+			<img src="./assets/images/nina.webp" srcset="./assets/images/nina.webp 600w,
+	             ./assets/images/nina-300.webp 300w" width="560" height="558" alt="Portrait de Nina Carducci">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -77,13 +79,18 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" alt="Salle de concerts">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="Portrait d'un homme en costume">
+				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" srcset="./assets/images/gallery/concerts/aaron-paul.webp 600w,
+	             ./assets/images/gallery/concerts/aaron-paul-300.webp 300w" alt="Salle de concerts">
+				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" srcset="./assets/images/gallery/entreprise/ali-morshedlou.webp 600w,
+	             ./assets/images/gallery/entreprise/ali-morshedlou-300.webp 300w" alt="Portrait d'un homme en costume">
 				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="Portrait d'une femme qui souris">
 				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing.webp" alt="Mains se rejoignant">
-				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji.webp" alt="Portrait d'un homme">
-				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens.webp" alt="Photo de couple lors du mariage">
-				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg.webp" alt="Portrait d'une fille">
+				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji.webp" srcset="./assets/images/gallery/portraits/ade-tunji.webp 600w,
+	             ./assets/images/gallery/portraits/ade-tunji-300.webp 300w" alt="Portrait d'un homme">
+				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens.webp" srcset="./assets/images/gallery/mariage/jakob-owens.webp 600w,
+	             ./assets/images/gallery/mariage/jakob-owens-300.webp 300w" alt="Photo de couple lors du mariage">
+				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg.webp" srcset="./assets/images/gallery/portraits/nino-van-prattenburg.webp 600w,
+	             ./assets/images/gallery/portraits/nino-van-prattenburg-300.webp 300w" alt="Portrait d'une fille">
 				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill.webp" alt="Artiste d'un concerts">
 				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp" alt="Portrait d'une femme qui souris">
 			</div>
