--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang='fr'>
 	<head>
+		<link rel="icon" href="data:,">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Site officiel de la photographe Nina Carducci">
-		<link rel="icon" href="data:,">
 		<title>Site de Nina Carducci</title>
-		<link rel="preload" as="image" href="./assets/images/nina.webp" defer>
-		<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-		<noscript><link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css"></noscript>
-		<link rel="preload" href="./assets/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-		<noscript><link rel="stylesheet" href="./assets/style.css"></noscript>
+		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" href="./assets/style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link rel="dns-prefetch" href="https://fonts.googleapis.com">
-		<link rel="dns-prefetch" href="https://fonts.gstatic.com">
-		<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-		<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"></noscript>
-		<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	</head>
 	<body>
 	<div class="top-header">
@@ -28,7 +21,7 @@
 				<li><a href="#gallery">Galerie</a></li>
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" aria-label="Lien vers la page Instagram"><img src="assets/images/instagram.png" width="40" height="40" alt="logo d'instagram"></a></li>
+				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" aria-label="Lien vers la page Instagram"><img src="assets/images/instagram.png" alt="logo d'instagram"></a></li>
 			</ul>
 		</div>
 	</div>
@@ -41,16 +34,25 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-1920.webp" srcset="./assets/images/slider/ryoji-iwata-600.webp 600w,
-	             ./assets/images/slider/ryoji-iwata-1920.webp 1920w" sizes="100vw" width="100" height="100" class="d-block w-100" alt="Homme marchant sur un passage piétons">
+					<picture class="d-block w-100">
+						<source media="(min-width: 600px)" srcset="./assets/images/slider/ryoji-iwata-1920.webp">
+					    <source media="(max-width: 600px)" srcset="./assets/images/slider/ryoji-iwata-600.webp">
+					    <img src="./assets/images/slider/ryoji-iwata-1920.webp" alt="Homme marchant sur un passage piétons">
+					</picture>
 				</div>
 				<div class="carousel-item">
-					<img loading="lazy" src="./assets/images/slider/nicholas-green-1920.webp" srcset="./assets/images/slider/nicholas-green-600.webp 600w,
-	             ./assets/images/slider/nicholas-green-1920.webp 1920w" sizes="100vw" width="600" height="278" class="d-block w-100" alt="Fans dans une salle de concerts">
+					<picture class="d-block w-100">
+						<source media="(min-width: 600px)" srcset="./assets/images/slider/nicholas-green-1920.webp">
+					    <source media="(max-width: 600px)" srcset="./assets/images/slider/nicholas-green-600.webp">
+					    <img loading="lazy" src="./assets/images/slider/nicholas-green-1920.webp" alt="Fans dans une salle de concerts">
+					</picture>
 				</div>
 				<div class="carousel-item">
-					<img loading="lazy" src="./assets/images/slider/edward-cisneros-1920.webp" srcset="./assets/images/slider/edward-cisneros-600.webp 600w,
-	             ./assets/images/slider/edward-cisneros-1920.webp 1920w" sizes="100vw" width="600" height="277" class="d-block w-100" alt="Danse d'un couple lors de leur mariage">
+					<picture class="d-block w-100">
+						<source media="(min-width: 600px)" srcset="./assets/images/slider/edward-cisneros-1920.webp">
+					    <source media="(max-width: 600px)" srcset="./assets/images/slider/edward-cisneros-600.webp">
+					    <img loading="lazy" src="./assets/images/slider/edward-cisneros-1920.webp" alt="Danse d'un couple lors de leur mariage">
+					</picture>
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -64,10 +66,12 @@
 		</div>
 	</div>
 	<div id="about">
-		<div class="picture left">
-			<img src="./assets/images/nina.webp" srcset="./assets/images/nina.webp 600w,
-	             ./assets/images/nina-300.webp 300w" width="560" height="558" alt="Portrait de Nina Carducci">
-		</div>
+		<picture class="picture left">
+			<source media="(min-width: 300px)" srcset="./assets/images/nina.webp">
+		    <source media="(max-width: 300px)" srcset="./assets/images/nina-300.webp">
+		    <img loading="lazy" src="./assets/images/nina.webp" alt="Portrait de Nina Carducci">
+		</picture>
+
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
 			<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
@@ -76,23 +80,54 @@
 		</div>
 	</div>
 	<div id="gallery">
-		<h2 class="title">Portfolio</h2>
+		<h3 class="title">Portfolio</h3>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul.webp" srcset="./assets/images/gallery/concerts/aaron-paul.webp 600w,
-	             ./assets/images/gallery/concerts/aaron-paul-300.webp 300w" alt="Salle de concerts">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" srcset="./assets/images/gallery/entreprise/ali-morshedlou.webp 600w,
-	             ./assets/images/gallery/entreprise/ali-morshedlou-300.webp 300w" alt="Portrait d'un homme en costume">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="Portrait d'une femme qui souris">
-				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing.webp" alt="Mains se rejoignant">
-				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji.webp" srcset="./assets/images/gallery/portraits/ade-tunji.webp 600w,
-	             ./assets/images/gallery/portraits/ade-tunji-300.webp 300w" alt="Portrait d'un homme">
-				<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens.webp" srcset="./assets/images/gallery/mariage/jakob-owens.webp 600w,
-	             ./assets/images/gallery/mariage/jakob-owens-300.webp 300w" alt="Photo de couple lors du mariage">
-				<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg.webp" srcset="./assets/images/gallery/portraits/nino-van-prattenburg.webp 600w,
-	             ./assets/images/gallery/portraits/nino-van-prattenburg-300.webp 300w" alt="Portrait d'une fille">
-				<img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill.webp" alt="Artiste d'un concerts">
-				<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp" alt="Portrait d'une femme qui souris">
+				<picture class="gallery-item">
+					<source media="(min-width: 300px)" srcset="./assets/images/gallery/concerts/aaron-paul.webp">
+				    <source media="(max-width: 300px)" srcset="./assets/images/gallery/concerts/aaron-paul-300.webp">
+				    <img loading="lazy" class="gallery-item" data-gallery-tag="Concert" src="./assets/images/gallery/concerts/aaron-paul.webp" alt="Salle de concerts">
+				</picture>
+				<picture class="gallery-item">
+					<source media="(min-width: 300px)" srcset="./assets/images/gallery/entreprise/ali-morshedlou.webp">
+				    <source media="(max-width: 300px)" srcset="./assets/images/gallery/entreprise/ali-morshedlou-300.webp">
+				    <img loading="lazy" class="gallery-item" data-gallery-tag="Entreprises" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="Portrait d'un homme en costume">
+				</picture>
+				<picture class="gallery-item">
+					<source media="(min-width: 300px)" srcset="./assets/images/gallery/entreprise/jason-goodman.webp">
+				    <source media="(max-width: 300px)" srcset="./assets/images/gallery/entreprise/jason-goodman.webp">
+				    <img loading="lazy" class="gallery-item" data-gallery-tag="Entreprises" src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="Portrait d'une femme qui souris">
+				</picture>
+				<picture class="gallery-item">
+					<source media="(min-width: 300px)" srcset="./assets/images/gallery/mariage/hannah-busing.webp">
+				    <source media="(max-width: 300px)" srcset="./assets/images/gallery/mariage/hannah-busing.webp">
+				    <img loading="lazy" class="gallery-item" data-gallery-tag="Mariages" src="./assets/images/gallery/mariage/hannah-busing.webp" alt="Mains se rejoignant">
+				</picture>
+				<picture class="gallery-item">
+					<source media="(min-width: 300px)" srcset="./assets/images/gallery/portraits/ade-tunji.webp">
+				    <source media="(max-width: 300px)" srcset="./assets/images/gallery/portraits/ade-tunji-300.webp">
+				    <img loading="lazy" class="gallery-item" data-gallery-tag="Portrait" src="./assets/images/gallery/portraits/ade-tunji.webp" alt="Portrait d'un homme">
+				</picture>
+				<picture class="gallery-item">
+					<source media="(min-width: 300px)" srcset="./assets/images/gallery/mariage/jakob-owens.webp">
+				    <source media="(max-width: 300px)" srcset="./assets/images/gallery/mariage/jakob-owens-300.webp">
+				    <img loading="lazy" class="gallery-item" data-gallery-tag="Mariages" src="./assets/images/gallery/mariage/jakob-owens.webp" alt="Photo de couple lors du mariage">
+				</picture>
+				<picture class="gallery-item">
+					<source media="(min-width: 300px)" srcset="./assets/images/gallery/portraits/nino-van-prattenburg.webp">
+				    <source media="(max-width: 300px)" srcset="./assets/images/gallery/portraits/nino-van-prattenburg-300.webp">
+				    <img loading="lazy" class="gallery-item" data-gallery-tag="Portrait" src="./assets/images/gallery/portraits/nino-van-prattenburg.webp" alt="Portrait d'une fille">
+				</picture>
+				<picture class="gallery-item">
+					<source media="(min-width: 300px)" srcset="./assets/images/gallery/concerts/austin-neill.webp">
+				    <source media="(max-width: 300px)" srcset="./assets/images/gallery/concerts/austin-neill.webp">
+				    <img loading="lazy" class="gallery-item" data-gallery-tag="Concert" src="./assets/images/gallery/concerts/austin-neill.webp" alt="Artiste d'un concerts">
+				</picture>
+				<picture class="gallery-item">
+					<source media="(min-width: 300px)" srcset="./assets/images/gallery/entreprise/mateus-campos-felipe.webp">
+				    <source media="(max-width: 300px)" srcset="./assets/images/gallery/entreprise/mateus-campos-felipe.webp">
+				    <img loading="lazy" class="gallery-item" data-gallery-tag="Entreprises" src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp" alt="Portrait d'une femme qui souris">
+				</picture>
 			</div>
 		</div>
 		<div class="quote">
@@ -159,15 +194,17 @@
 					<input type="submit" value="Envoyer">
 				</form>
 			</div>
-			<div class="picture right">
-				<img loading="lazy" src="./assets/images/camera.webp" width="100" height="100" alt="Photo d'une caméra">
-			</div>
+			<picture class="picture right">
+				<source media="(min-width: 300px)" srcset="./assets/images/camera.webp">
+			    <source media="(max-width: 300px)" srcset="./assets/images/camera.webp">
+			    <img loading="lazy" src="./assets/images/camera.webp" alt="Photo d'une caméra">
+			</picture>
 		</div>
 	</div>
 
-	
+	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
+	<script defer src="./assets/maugallery.js"></script>
+	<script defer src="./assets/scripts.js"></script>
 	</body>
 </html>
