Ajout du référencement locale
ajout d'un footer avec du référencement local

--- a/index.html
+++ b/index.html
@@ -201,6 +201,19 @@
 			</picture>
 		</div>
 	</div>
+	<footer style="padding: 20px 0px; text-align: center;">
+	    <div itemscope itemtype="https://schema.org/LocalBusiness" style="margin: auto;">
+	      <h2><span itemprop="name">Nina Carducci</span></h2>
+	      <span itemprop="description"> Photographe sur Bordeaux et ses alentours</span>
+	      <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+	        <span itemprop="streetAddress">68 avenue Alsace-Lorraine</span>,
+	        <span itemprop="postalCode">33200</span>
+      		<span itemprop="addressLocality">Bordeaux, France</span>
+	      </div>
+	      Téléphone: <span itemprop="telephone">05 56 67 78 89</span><br>
+	      <span><meta itemprop="openingHours" content="Mo-Fr 10:00-22:00">Du lundi au vendredi: 10h - 22h</span>
+	    </div>
+	</footer>
 
 	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
