--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang='fr'>
+<html lang='fr' prefix="og: https://ogp.me/ns#">
 	<head>
 		<link rel="icon" href="data:,">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Site officiel de la photographe Nina Carducci">
+		<meta property="og:title" content="Nina Carducci" />
+		<meta property="og:description" name="description" content="Site officiel de la photographe Nina Carducci" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://nina-carducci.github.io/" />
+		<meta property="og:image" content="https://nina-carducci.github.io/assets/images/nina.png" />
 		<title>Site de Nina Carducci</title>
 		<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="./assets/style.css">
